css/footer.css
@font-face {
	font-family: "footer-icons";
	src: url(https://gamepedia.cursecdn.com/hydra/fonts/footer-icons.eot) format("embedded-opentype"), url(https://gamepedia.cursecdn.com/hydra/fonts/footer-icons.woff) format("woff"), url(https://gamepedia.cursecdn.com/hydra/fonts/footer-icons.ttf) format("truetype"), url(https://gamepedia.cursecdn.com/hydra/fonts/footer-icons.svg) format("svg");
	font-weight: 400;
	font-style: normal;
}

html body #global-wrapper {
	clear: both;
	min-height: 100%;
	height: auto !important;
	margin-bottom: -156px;
}

html body #global-wrapper #footer-push {
	height: 156px;
}

html body.hide-ads #global-wrapper {
	clear: both;
	min-height: 100%;
	height: auto !important;
	margin-bottom: -155px;
}

html body.hide-ads #global-wrapper #footer-push {
	height: 155px;
}

#gamepedia-footer {
	font-family: Rubik;
	background-color: #000;
	padding: 10px 24px;
}

#gamepedia-footer .footer-wrapper-gp {
	display: grid;
	row-gap: 24px;
	grid-template-areas:
	'logo logo'
	'social social'
	'links links';
	grid-template-columns: 50%;
	text-align: center;
}

@media (min-width: 768px) {
	#gamepedia-footer .footer-wrapper-gp {
		grid-template-columns: 220px 1fr 1fr;
		grid-template-areas:
		  'logo social links';
		max-width: 800px;
		margin: auto;
		font-size: 15px;
	}
}

#gamepedia-footer {
	clear: both;
}

#gamepedia-footer .footer-logo {
	grid-area: logo;
}

#gamepedia-footer .footer-social {
	grid-area: social;
}

#gamepedia-footer .footer-links {
	grid-area: links;
}

#gamepedia-footer a {
	color: #c9c9c9;
}

#gamepedia-footer ul {
	list-style: none;
	list-style-image: none;
	margin: 0;
	padding: 0;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: space-evenly;
}

@supports (-ms-ime-align:auto) { /* Edge only */
    #gamepedia-footer ul {
        justify-content: space-around;
    }
}

@media (max-width: 1024px) {
	#gamepedia-footer ul li {
		flex: 0 0 33.33%;
	}
}

#gamepedia-footer .footer-wrapper-gp .footer-gp-logo {
	height: 39px;
}

#gamepedia-footer div.footer-box ul.social li svg {
	fill: #c9c9c9;
}

#gamepedia-footer div.footer-box ul.social li svg:hover {
	fill: #fff;
	transition: fill 0.3s;
}

#gamepedia-footer .footer-social ul li a {
	position: relative;
}

#gamepedia-footer .footer-social ul li:last-child {
	padding-right: 0;
}

#gamepedia-footer .footer-links ul {
	justify-content: space-around;
}

.minerva-footer .footer-content .hlist-separated #gamepedia-footer li:after {
	display: none;
}

#curse-footer {
	background-color: #002a32;
}

#curse-footer .footer-wrapper {
	font-family: 'Rubik', sans-serif !important;
	padding: 12px 5px;
	display: grid;
	row-gap: 24px;
	grid-template-areas:
		'ad ad'
		'logo logo'
		'properties properties'
		'social social'
		'overview overview'
		'community community'
		'advertise advertise';
}

#curse-footer.hide-ads .footer-wrapper {
	grid-template-areas:
		'logo logo'
		'properties properties'
		'social social'
		'overview overview'
		'community community'
		'advertise advertise';
}

@media (min-width: 768px) {
	#curse-footer .footer-wrapper {
		padding: 24px 18px;
		grid-template-columns: 50%;
		grid-template-areas:
		  'logo logo'
		  'properties properties'
		  'social social'
		  'overview overview'
		  'community community'
		  'advertise ad';
		column-gap: 18px;
	}

	#curse-footer.hide-ads .footer-wrapper {
		grid-template-areas:
		  'logo logo'
		  'properties properties'
		  'social social'
		  'overview overview'
		  'community community'
		  'advertise advertise';
	}
}

@media (min-width: 1024px) {
	#curse-footer .footer-wrapper {
		padding: 24px 24px;
		grid-template-columns: 1fr 1fr 1fr 300px;
		grid-template-areas:
		  'logo logo logo logo'
		  'properties overview community ad'
		  'properties overview advertise ad'
		  'social overview advertise ad';
		width: 1024px;
		margin: auto;
	}

	#curse-footer.hide-ads .footer-wrapper {
		grid-template-columns: 1fr 1fr 1fr;
		grid-template-areas:
		  'logo logo logo'
		  'properties overview community'
		  'properties overview advertise'
		  'social overview advertise';
	}
}

#curse-footer h2 {
	font-size: 12px;
	font-weight: bold;
	color: white;
	text-transform: uppercase;
	border: 0;
}

@media (max-width: 500px) {
	#curse-footer h2 {
		margin-bottom: 5px
	}
}

#curse-footer .footer-ad {
	grid-area: ad;
	margin: auto;
}

@media (min-width: 768px) {
	#curse-footer .footer-ad {
		margin-left: 0;
	}
}

@media (min-width: 1024px) {
	#curse-footer .footer-ad {
		margin-left: auto;
	}
}

.footer-logo, .footer-social, .footer-properties,
.footer-overview, .footer-community, .footer-advertise {
	padding: 0 18px;
}

@media (min-width: 500px) {
	.footer-logo, .footer-social, .footer-properties,
	.footer-overview,.footer-community, .footer-advertise {
		padding: 0;
	}
}

#curse-footer .footer-logo {
    grid-area: logo;
	margin-left: auto;
	margin-right: auto;
	display: flex;
	align-items: center;
}

#curse-footer .footer-properties {
	grid-area: properties;
}

#curse-footer .footer-social {
	grid-area: social;
}

#curse-footer .footer-overview {
	grid-area: overview;
}

#curse-footer .footer-community {
	grid-area: community;
}

#curse-footer .footer-advertise {
	grid-area: advertise;
}

#curse-footer a, #curse-footer a:visited, #curse-footer a:active {
	color: #00d6d6;
	font-size: 14px;
	text-decoration: none;
}

#curse-footer a:hover {
	color: #fff;
}

#curse-footer ul {
	list-style: none;
	list-style-image: none;
	margin: 0;
	padding: 0;
}

#curse-footer div.footer-box ul.mobile-split {
	column-count: 2;
}

#curse-footer div.footer-box ul li {
	line-height: 2.5;
}

@media (min-width: 1024px) {
	#curse-footer div.footer-box ul li {
		line-height: 2;
	}
}

@media (min-width: 1024px) {
	#curse-footer div.footer-box ul.mobile-split {
		column-count: 1;
	}
}

#curse-footer div.footer-box ul li {
	border: 0 none;
	content: none;
	font-size: inherit;
	line-height: 2;
	padding: 0;
}

@media (max-width: 768px) {
	footer.minerva-footer #curse-footer div.footer-box ul.mobile-split {
		display: flex;
		flex-wrap: wrap;
	}

	footer.minerva-footer #curse-footer div.footer-box ul.mobile-split li {
		flex: 0 45%;
	}
}

#curse-footer div.footer-box ul.social li {
    display: inline-block;
    margin-right: 10px;
    padding-right: 6px;
    text-align: center;
    text-decoration: none;
}

#curse-footer div.footer-box ul.social li svg {
	fill: #fff;
	opacity: 0.3;
}

#curse-footer div.footer-box ul.social li svg:hover {
	opacity: 1.0;
	transition: opacity 0.3s;
}

.hlist-separated #curse-footer div.footer-box ul li a {
	padding-left: 0;
}

.hlist-separated #curse-footer li::after {
	content: unset;
}

#curse-footer div.ad-placement {
	border: 1px solid #585858;
	box-sizing: content-box;
	display: inline-block;
	height: 250px;
	width: 300px;
}

#curse-footer div.footer-post {
	font-family: Rubik;
	background-color: #13272b;
	color: #fff;
	padding: 12px 0;
	font-size: 12px;
	text-align: center;
	width: 100%;
	line-height: 3em;
}

@media (max-width: 768px) {
	footer.minerva-footer #curse-footer div.footer-post {
		padding-bottom: 50px;
	}

	footer.minerva-footer .post-content {
		margin: 0px 0px;
	}

	footer.minerva-footer ul.hlist li#footer-hydra-hydrafooter {
		margin: 0px;
	}
}


#curse-footer div.footer-post hr {
	color: #fff;
	max-width: 1024px;
	margin: auto;
	opacity: 0.25;
}

#curse-footer div.footer-post .footer-post-mobile {
	font-size: 14px;
	text-transform: uppercase;
	color: #00d6d6;
	font-weight: bold;
}

